--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <section id="signup" class="py-24 px-6 text-center bg-gradient-to-r from-purple-700 to-indigo-800 text-white">
     <h2 class="text-6xl font-bold mb-8 fade-in">Awaken Your Inner Harmony</h2>
     <p class="text-2xl mb-10 max-w-3xl mx-auto">Claim Level 1 free: Videos, trackers, mantra meditations. Embrace yin-yang's eternal dance—tomorrow's media blooms await.</p>
-    <form action="https://formsubmit.co/your-email-here" method="POST" class="max-w-lg mx-auto">
+    <form action="https://formsubmit.co/fusionfitportal@proton.me" method="POST" class="max-w-lg mx-auto">
       <div class="flex">
         <input type="email" name="email" placeholder="Enter the Portal of Balance" required class="flex-grow p-5 rounded-l-full focus:outline-none focus:ring-4 focus:ring-white">
         <button type="submit" class="bg-orange-600 hover:bg-orange-700 text-white px-10 py-5 rounded-r-full font-bold">Ascend in Harmony</button>
