--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <p class="text-2xl mb-10 max-w-3xl mx-auto">Claim Level 1 free: Videos, trackers, mantra meditations. Embrace yin-yang's eternal dance—tomorrow's media blooms await.</p>
     <form action="https://formsubmit.co/fusionfitportal@gmail.com" method="POST" class="max-w-lg mx-auto">
       <div class="flex">
-        <input type="email" name="email" placeholder="Enter the Portal of Balance" required class="flex-grow p-5 rounded-l-full focus:outline-none focus:ring-4 focus:ring-white">
+  <input type="email" name="email" placeholder="Enter the Portal of Balance" required class="flex-grow p-5 rounded-l-full focus:outline-none focus:ring-4 focus:ring-white text-black bg-white">
         <button type="submit" class="bg-orange-600 hover:bg-orange-700 text-white px-10 py-5 rounded-r-full font-bold">Ascend in Harmony</button>
       </div>
     </form>
