--- a/index.html
+++ b/index.html
@@ -195,11 +195,17 @@
     <h2 class="text-6xl font-bold mb-8 fade-in">Awaken Your Inner Harmony</h2>
     <p class="text-2xl mb-10 max-w-3xl mx-auto">Claim Level 1 free: Videos, trackers, mantra meditations. Embrace yin-yang's eternal dance—tomorrow's media blooms await.</p>
     <form action="https://formsubmit.co/fusionfitportal@gmail.com" method="POST" class="max-w-lg mx-auto">
-      <div class="flex">
-  <input type="email" name="email" placeholder="Enter the Portal of Balance" required class="flex-grow p-5 rounded-l-full focus:outline-none focus:ring-4 focus:ring-white text-black bg-white">
-        <button type="submit" class="bg-orange-600 hover:bg-orange-700 text-white px-10 py-5 rounded-r-full font-bold">Ascend in Harmony</button>
-      </div>
-    </form>
+  <div class="flex flex-col space-y-4">
+    <input type="text" name="name" placeholder="Your Name" required class="p-5 rounded-full focus:outline-none focus:ring-4 focus:ring-white">
+    <input type="email" name="email" placeholder="Enter the Portal of Balance" required class="p-5 rounded-full focus:outline-none focus:ring-4 focus:ring-white">
+    <textarea name="message" placeholder="Your Message or Goal" required class="p-5 rounded-lg focus:outline-none focus:ring-4 focus:ring-white"></textarea>
+    <button type="submit" class="bg-orange-600 hover:bg-orange-700 text-white px-10 py-5 rounded-full font-bold">Ascend in Harmony</button>
+  </div>
+  <!-- Optional: Redirect to a thank-you page -->
+  <input type="hidden" name="_next" value="https://your-site.com/thank-you.html">
+  <!-- Optional: Custom email subject -->
+  <input type="hidden" name="_subject" value="New Fusionfitportal Submission">
+</form>
   </section>
 
   <!-- Sticky CTA -->
