--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <button type="submit" class="bg-orange-600 hover:bg-orange-700 text-white px-10 py-5 rounded-full font-bold">Ascend in Harmony</button>
   </div>
   <!-- Optional: Redirect to a thank-you page -->
-  <input type="hidden" name="_next" value="https://your-site.com/thank-you.html">
+  <input type="hidden" name="_next" value="https://Fusionfitportal/thank-you.html">
   <!-- Optional: Custom email subject -->
   <input type="hidden" name="_subject" value="New Fusionfitportal Submission">
 </form>
