--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <button class="accordion-btn" onclick="toggleAccordion(this)"><span class="symbol-icon">🔥</span> Core Crunches: Lotus Core Ignition</button>
           <div class="accordion-content">
             <ul class="list-disc text-gray-700">
-              <li>Feet on chair: Crunches 20→108 build – 108 as sacred beads, building yang fire in yin's abdominal mudra.</li>
+              <li>Feet on chair: Crunches 108 build – 108 as sacred beads, building yang fire in yin's abdominal mudra.</li>
               <li>Side Touch Crunches – Twist to sides, harmonizing left (yin moon) with right (yang sun).</li>
             </ul>
           </div>
